--- a/src/components/company-block/company-block.scss
+++ b/src/components/company-block/company-block.scss
@@ -3,12 +3,20 @@
   background-color: #212329;
   padding-bottom: 50px;
   .title{
-    padding: 60px 0;
+    padding: 40px 0;
     width: 100%;
     text-align: center;
     font-size: 2em;
     font-weight: bold;
     color:white;
+  }
+  .logo{
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+    img{
+      width: 100%;
+    }
   }
   .text{
     width: 80%;
