--- a/src/components/map-block/map-block.scss
+++ b/src/components/map-block/map-block.scss
@@ -28,16 +28,18 @@
     }
     .address{
       padding-top: 15px;
+      font-weight: normal;
     }
     .email{
       padding-top: 15px;
       font-size: 1.5em;
+      color: #ffb536;
     }
     .time{
       font-weight: bold;
       padding-top: 15px;
-      color: #8f9195;
       font-size: 0.8em;
+      color: #7b80bf;
     }
   }
   .ymap-container{
