--- a/src/components/main-block/main-block.scss
+++ b/src/components/main-block/main-block.scss
@@ -51,7 +51,8 @@
         text-align: right;
         font-size: 1.5em;
         font-weight: bold;
-        color: white;
+        //color: white;
+        color: #ffb536;
       }
       .time{
         padding-top: 10px;
