--- a/src/components/map-block/map-block.scss
+++ b/src/components/map-block/map-block.scss
@@ -44,7 +44,8 @@
   }
   .ymap-container{
     width: 100%;
-    height: 40vw;
+    height: 25vw;
+    min-height: 400px;
     @media screen and (max-width: 720px){
       height: 60vh;
       }
