--- a/src/components/graphics-block/graphics-block.scss
+++ b/src/components/graphics-block/graphics-block.scss
@@ -51,7 +51,7 @@
         width: 90%;
         margin: 0 auto;
         padding-top: 20px;
-        color:#6f7075;
+        color:#bec0c7;
         font-size: 0.8em ;
         font-weight: bold;
       }
