--- a/src/components/product-block/product-block.scss
+++ b/src/components/product-block/product-block.scss
@@ -19,6 +19,7 @@
     justify-content: center;
     padding-bottom: 20px;
     flex-wrap: wrap;
+    flex-direction: row-reverse;
     @media screen and (max-width: 720px){
       flex-direction: column;
     }
