--- a/src/components/product-block/product-block.scss
+++ b/src/components/product-block/product-block.scss
@@ -26,6 +26,14 @@
 
     &.reverse {
       flex-direction: row;
+
+      img {
+        width: 25%;
+        padding: 10px;
+        @media screen and (max-width: 720px){
+          width: 80%;
+        }
+      }
     }
     img{
       width: 20%;
